--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
       "commands": true
     }
   },
-  "dependencies": {},
+  "dependencies": {
+    "xcraft-core-converters": "^3.0.0",
+    "xcraft-core-etc": "^2.0.4",
+    "xcraft-core-goblin": "^4.0.1"
+  },
   "devDependencies": {
     "prettier": "2.0.4",
     "xcraft-dev-prettier": "^2.0.0",
