--- a/package.json
+++ b/package.json
@@ -14,12 +14,25 @@
     }
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/free-regular-svg-icons": "^5.13.0",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "xcraft-core-converters": "^3.0.0",
     "xcraft-core-etc": "^2.0.4",
     "xcraft-core-goblin": "^4.0.1"
   },
+  "optionalDependencies": {
+    "@fortawesome/fontawesome-pro": "^5.13.0",
+    "@fortawesome/pro-solid-svg-icons": "^5.13.0",
+    "@fortawesome/pro-regular-svg-icons": "^5.13.0",
+    "@fortawesome/pro-light-svg-icons": "^5.13.0"
+  },
   "devDependencies": {
     "prettier": "2.0.4",
+    "xcraft-core-shredder": "^4.0.0",
     "xcraft-dev-prettier": "^2.0.0",
     "xcraft-dev-rules": "^2.0.0"
   },
